# PA193-Bech32m

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: default.yaml
bech32m_reference/: README.md  index.js  package-lock.json  package.json
bin_testing/: diff_fuzzing.py  setup.py
src/: CMakeLists.txt  argument_parser.cpp  argument_parser.h  base64_bit_storage.cpp  base64_bit_storage.h  bech32m.cpp  bech32m.h  bech32m_bit_storage.cpp  bech32m_bit_storage.h  bech32m_error_detection.cpp  bech32m_error_detection.h  bech32m_exception.h  bin_bit_storage.cpp  bin_bit_storage.h  bit_storage.cpp  bit_storage.h  hex_bit_storage.cpp  hex_bit_storage.h  main.cpp
src/bitstorage/: base64_bit_storage.cpp  base64_bit_storage.h  bech32m_bit_storage.cpp  bech32m_bit_storage.h  bin_bit_storage.cpp  bin_bit_storage.h  bit_storage.h  hex_bit_storage.cpp  hex_bit_storage.h
test/: CMakeLists.txt  test_bech32m.cpp  test_bit_storage.cpp  test_bit_storage.h  test_macros.h  test_parser.cpp  test_parser.h
